crates/parser/src/tests/snapshots/op_prec_left_3.snap
---
source: crates/parser/src/tests.rs
assertion_line: 251
expression: "(test[1], ast, ast_string)"
---
- 19 - 21 + 40
- Ok:
    nodes:
      - node:
          BinOp:
            op: Add
            lhs:
              node:
                BinOp:
                  op: Sub
                  lhs:
                    node:
                      Lit:
                        value:
                          UInt64: 19
                  rhs:
                    node:
                      Lit:
                        value:
                          UInt64: 21
            rhs:
              node:
                Lit:
                  value:
                    UInt64: 40
- (+ (- 19 21) 40)

