crates/parser/src/tests/snapshots/op_prec_right_1.snap
---
source: crates/parser/src/tests.rs
assertion_line: 251
expression: "(test[1], ast, ast_string)"
---
- 19 ** 21 ** 40
- Ok:
    nodes:
      - node:
          BinOp:
            op: Pow
            lhs:
              node:
                Lit:
                  value:
                    UInt64: 19
            rhs:
              node:
                BinOp:
                  op: Pow
                  lhs:
                    node:
                      Lit:
                        value:
                          UInt64: 21
                  rhs:
                    node:
                      Lit:
                        value:
                          UInt64: 40
- (** 19 (** 21 40))

