crates/parser/src/tests/snapshots/parens_prec.snap
---
source: crates/parser/src/tests.rs
assertion_line: 258
expression: "(test[1], ast, ast_string)"
---
- (19 + 21) / 40
- Ok:
    nodes:
      - kind:
          BinOp:
            op: Div
            lhs:
              kind:
                BinOp:
                  op: Add
                  lhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 19
                        ty: ~
                  rhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 21
                        ty: ~
                  ty: ~
            rhs:
              kind:
                Lit:
                  value:
                    UInt64: 40
                  ty: ~
            ty: ~
- (/ (+ 19 21) 40)

