crates/parser/src/tests/snapshots/struct_dup.snap
---
source: crates/parser/src/tests.rs
assertion_line: 375
expression: "(test[1], ast, ast_string)"
---
- "\nstruct Foo {}\nstruct Foo {}\n"
- Err:
    message: "Struct `Foo` already defined"
    line: 3
    column: 1
- "Parsing error: Struct `Foo` already defined at 3:1"

