crates/parser/src/tests/snapshots/struct_fields_only.snap
---
source: crates/parser/src/tests.rs
assertion_line: 375
expression: "(test[1], ast, ast_string)"
---
- "\nstruct Foo {\n    let a: int\n    let b: float = 1.0\n}\n"
- Ok:
    nodes:
      - kind:
          Struct:
            name: Foo
            fields:
              - kind:
                  Let:
                    name: a
                    antn: Int32
                    init: ~
              - kind:
                  Let:
                    name: b
                    antn: Float
                    init:
                      kind:
                        Lit:
                          value:
                            Float: 1.0
            methods: []
- "(struct Foo '((let a:int32) (let b:float 1)) '())"

