crates/parser/src/tests/snapshots/unop_double_neg_good.snap
---
source: crates/parser/src/tests.rs
assertion_line: 272
expression: "(test[1], ast, ast_string)"
---
- "-(-21)"
- Ok:
    nodes:
      - kind:
          UnOp:
            op: Sub
            rhs:
              kind:
                UnOp:
                  op: Sub
                  rhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 21
                        ty: ~
                  ty: ~
            ty: ~
- (- (- 21))

